<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:elevation="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/mImageViewCardViewItem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/schoolName_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/school_name"
            android:layout_toEndOf="@+id/mImageViewCardViewItem"
            tools:text="@string/school_name" />
        <TextView
            android:id="@+id/mSchoolName"
            android:layout_below="@+id/schoolName_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/mImageViewCardViewItem"
            tools:text="@tools:sample/lorem" />


        <TextView
            android:id="@+id/course"
            android:layout_below="@+id/mSchoolName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/course_name"
            android:layout_toEndOf="@+id/mImageViewCardViewItem"
            tools:text="@string/course_name" />
        <TextView
            android:id="@+id/mSchoolCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/mImageViewCardViewItem"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/lang"
            android:layout_below="@+id/mSchoolCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/languages_available"
            android:layout_toEndOf="@+id/mImageViewCardViewItem"
            tools:text="@string/languages_available" />
        <TextView
            android:id="@+id/mSchoolLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lang"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@+id/mImageViewCardViewItem"
            tools:text="@tools:sample/lorem" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>